testsuite/tests/parser/should_compile/T7118.hs
main :: IO (){-# LINE 8 "" #-}
main = print "Hi"
