testsuite/tests/parser/should_fail/MultilineStringsEscapeOverflow.hs
{-# LANGUAGE MultilineStrings #-}

s :: String
s = """\xfffffffffff"""
